--- a/teagasc/templates/base.html
+++ b/teagasc/templates/base.html
@@ -11,7 +11,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="#createFarm">Create Farm</a></li>
             <li><a href="#createFarmer">Create Farmer</a></li>
-            <li><a href="conductAssessment">Conduct Assessment</a></li>
+            <li><a href="conductGrasslandAssessment">Conduct Assessment</a></li>
             <li><a href="#View Assessments">View Assessments</a></li>
             <li style="float: right"><a href="#farm_records">Farm Records</a></li>
         </ul>
