--- a/teagasc/templates/conductGrasslandAssessment2.html
+++ b/teagasc/templates/conductGrasslandAssessment2.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
     {% block body %}
-        <form action = "/conductAssessment" method="POST" class="formindent">
+        <form action = "/home" method="POST" class="formindent">
             {% csrf_token %}
             {{form.as_p}}
             <input type = 'submit' value="Submit">
