--- a/teagasc/static/css/styles.css
+++ b/teagasc/static/css/styles.css
@@ -22,7 +22,8 @@ li a:hover:not(.active){
     background-color: green;
 }
 .formclass {
-    border: 4px solid red;
+    padding: 14px 16px;
+    align-items: center;
 }
 .formindent {
     margin-left: 15%;
