--- a/teagasc/templates/conductGrasslandAssessment5.html
+++ b/teagasc/templates/conductGrasslandAssessment5.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
     {% block body %}
-        <form action = "/conductGrasslandAssessment5" method="POST" class="formindent">
+        <form action = "/home" method="POST" class="formindent">
             {% csrf_token %}
             <table border="1">
                 {{ form }}
