Tidied up the UI and implemented record 5 land

--- a/teagasc/templates/conductGrasslandAssessment3.html
+++ b/teagasc/templates/conductGrasslandAssessment3.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
     {% block body %}
-        <form action = "/conductGrasslandAssessment3" method="POST" class="formindent">
+        <form action = "/conductGrasslandAssessment3" method="POST" id="cssTable">
             {% csrf_token %}
             <table border="1">
                 {{ form }}
