--- a/teagasc/templates/conductGrasslandAssessment4.html
+++ b/teagasc/templates/conductGrasslandAssessment4.html
@@ -1,11 +1,25 @@
 {% extends "base.html" %}
 
     {% block body %}
-        <form action = "/conductGrasslandAssessment4" method="POST" class="formindent">
+        <form action = "/conductGrasslandAssessment4" method="POST" id="cssTable">
             {% csrf_token %}
-            <table border="1">
-                {{ form }}
-            </table>
+            <table border="1" id="table">
+                <tr>
+                   <th scope="col">Type of Feed</th>
+                   <th scope="col">Feed Name</th>
+                   <th scope="col">Kg per Tonne fed</th>
+                   <th scope="col">Tonnage</th>
+               </tr>
+               {% for task,field in form %}
+               <tr>
+                   <td>{{ task.feed_type }}</td>
+                   <td>{{ task.feed_name }}</td>
+                   <td>{{ task.kg_per_tonne_fed }}</td>
+                   <td>{{ field }}</td>
+                   <br>
+               </tr>
+               {% endfor %}
+        </table>
             <input type = 'submit' value="Submit">
         </form>
     {% endblock %}
