--- a/teagasc/static/css/styles.css
+++ b/teagasc/static/css/styles.css
@@ -22,20 +22,23 @@ li a:hover:not(.active){
     background-color: green;
 }
 .formclass {
-    padding: 14px 16px;
     align-items: center;
 }
 
 .formindent {
-    margin-left: 15%;    
+    margin-left: 12%;    
 }
 
-table {
-    /* padding: 14px 16px; */
-    margin-top: 2em;
-    align-items: center;
-    border:1px #666666;
-    border-collapse: collapse;
+td {
+    height: 50px;
+    width: 50px;
+}
+
+#cssTable td {
+    text-align: center;
+    vertical-align: top;
+    padding-top: 0%;
+    padding-left: 5%;
 }
 
 body {
