--- a/teagasc/templates/conductGrasslandAssessment3.html
+++ b/teagasc/templates/conductGrasslandAssessment3.html
@@ -6,7 +6,9 @@
             <table border="1">
                 {{ form }}
             </table>
-            <input type = 'submit' value="Submit">
+            <div id="button_wrapper">
+                <input type = 'submit' value="Submit">
+            </div>
         </form>
     {% endblock %}
     
