--- a/teagasc/templates/conductGrasslandAssessment5.html
+++ b/teagasc/templates/conductGrasslandAssessment5.html
@@ -1,26 +1,31 @@
 {% extends "base.html" %}
 
     {% block body %}
-
+        <style>
+            th {
+                text-align: center !important;
+            }
+        </style>
         <form action = "/conductGrasslandAssessment5" method="POST" id="cssTable">
             {% csrf_token %}
                 <table border="1" id="table">
                         <tr>
-                           <th scope="col">Type of Livestock</th>
-                           <th scope="col">Nitrogen</th>
-                           <th scope="col">Phosphuros</th>
-                           <th>Number of Animals</th>
-                       </tr>
-                       {% for task,field in form %}
-                       <tr>
-                           <td>{{ task.type_of_animal }}</td>
-                           <td>{{ task.organic_nitrates }}</td>
-                           <td>{{ task.organic_potassium }}</td>
-                           <td>{{ field }}</td>
-                           <br>
-                       </tr>
-                       {% endfor %}
+                            <th scope="col">Type of Livestock</th>
+                            <th scope="col">Nitrogen</th>
+                            <th scope="col">Phosphoros</th>
+                            <th>Number of Animals</th>
+                        </tr>
+                        {% for task,field in form %}
+                        <tr>
+                            <td>{{ task.type_of_animal }}</td>
+                            <td>{{ task.organic_nitrates }}</td>
+                            <td>{{ task.organic_potassium }}</td>
+                            <td>{{ field }}</td>
+                        </tr>
+                        {% endfor %}
                 </table>
-            <input type = 'submit' value="Submit">
+                <div id="button_wrapper" >
+                    <input type = 'submit' value="Submit">
+                </div>
         </form>
     {% endblock %}
