--- a/teagasc/templates/conductGrasslandAssessment.html
+++ b/teagasc/templates/conductGrasslandAssessment.html
@@ -7,7 +7,9 @@
             <table border=1>
                 {{ form }}
             </table>
-            <input type="submit" value="Submit" class="my-button">
-            <input type="reset" value="Clear" class="my-button">
+            <div id="button_wrapper">
+                <input type = 'submit' value="Submit">
+                <input type = 'reset' value="Clear">
+            </div>
         </form>
     {% endblock %}
