--- a/teagasc/templates/conductGrasslandAssessment3.html
+++ b/teagasc/templates/conductGrasslandAssessment3.html
@@ -8,20 +8,7 @@
             </table>
             <div id="button_wrapper">
                 <input type = 'submit' value="Submit">
+                <input type = 'reset' value="Clear">
             </div>
         </form>
     {% endblock %}
-    
-    
-    <!--<table style = "display: block;">
-                <tbody>
-                    <tr>
-                        <br>
-                        {% for field in form %}
-                            <td style = "display: inline-block;"> {{ field.label_tag }}
-                                 <br> {{ field }} <br> {{field}}<br><br></td>
-                           
-                        {% endfor %}
-                    </tr>
-                </tbody>
-            </table>-->
