--- a/teagasc/templates/conductGrasslandAssessment5.html
+++ b/teagasc/templates/conductGrasslandAssessment5.html
@@ -24,8 +24,9 @@
                         </tr>
                         {% endfor %}
                 </table>
-                <div id="button_wrapper" >
+                <div id="button_wrapper">
                     <input type = 'submit' value="Submit">
+                    <input type = 'reset' value="Clear">
                 </div>
         </form>
     {% endblock %}
