--- a/teagasc/templates/grasslandReport.html
+++ b/teagasc/templates/grasslandReport.html
@@ -15,7 +15,7 @@
                 <table border="1" id="table">
                         <tr>
                             <th scope="col">Total Nitrates</th>
-                            <th scope="col">Total Phisphates</th>
+                            <th scope="col">Total Phosphates</th>
                             <th scope="col">Total Land Area</th>
                             <th scope="col">Grassland Stocking Rate</th>
                             <th scope="col">Wholefarm Stocking Rate</th>
