--- a/teagasc/templates/importExport.html
+++ b/teagasc/templates/importExport.html
@@ -2,9 +2,21 @@
 {% load static %}
 
     {% block body %}
+        <datalist id="farmers">
+            {% for name in farmer_list %}
+                <option value= "{{ name }}">
+            {% endfor %} 
+        </datalist>
+        <!-- <p>Select Farmer</p>
+        <input list="farmers" name="farmer_name" autocomplete="off"> -->
+        <br>
         <form action = "/importExport" method="POST" class="formindent">
             {% csrf_token %}
-            <h1> IMports Exports PAge</h1>
+            <table border=1>
+                
+                    
+                    {{ form }}
+            </table>
             <div id="button_wrapper">
                 <input type = 'submit' value="Submit">
                 <input type = 'reset' value="Clear">
