--- a/teagasc/templates/grasslandReport.html
+++ b/teagasc/templates/grasslandReport.html
@@ -19,6 +19,7 @@
                             <th scope="col">Total Land Area</th>
                             <th scope="col">Grassland Stocking Rate</th>
                             <th scope="col">Wholefarm Stocking Rate</th>
+                            <th scope="col">Livestock unit per Hectacre</th>
                         </tr>
                         {% for total in list_for_result %}
                         <tr>
@@ -27,6 +28,7 @@
                             <td>{{ total.2 }}</td>
                             <td>{{ total.3 }}</td>
                             <td>{{ total.4 }}</td>
+                            <td>{{ total.5 }}</td>
                         </tr>
                         {% endfor %}
                 </table>
