Slurry Storage almost completed

--- a/teagasc/templates/base.html
+++ b/teagasc/templates/base.html
@@ -9,7 +9,7 @@
         {% block nav %}
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="#createFarm">Create Farm</a></li>
+            <li><a href="storage">Storage</a></li>
             <li><a href="importExport">Import / Export</a></li>
             <li><a href="conductGrasslandAssessment">Conduct Assessment</a></li>
             <li><a href="#View Assessments">View Assessments</a></li>
