--- a/teagasc/templates/importExportReport.html
+++ b/teagasc/templates/importExportReport.html
@@ -13,21 +13,23 @@
         <form action = "/importExportReport" method="POST" class="formindent" >
             {% csrf_token %}
                 <table border="1" id="table">
-                        <tr>
-                            <th scope="col">Total Nitrates</th>
-                            <th scope="col">Total Phosphates</th>
-                            <th scope="col">Total Land Area</th>
-                            <th scope="col">Grassland Stocking Rate</th>
-                            <th scope="col">Wholefarm Stocking Rate</th>
-                        </tr>
-                        {% for total in list_for_result %}
-                        <tr>
-                            <td>{{ total.0 }}</td>
-                            <td>{{ total.1 }}</td>
-                            <td>{{ total.2 }}</td>
-                            <td>{{ total.3 }}</td>
-                            <td>{{ total.4 }}</td>
-                        </tr>
+                    <tr>
+                        <th scope="col">Total Nitrates</th>
+                        <th scope="col">Total Phosphates</th>
+                        <th scope="col">Total Land Area</th>
+                        <th scope="col">Grassland Stocking Rate</th>
+                        <th scope="col">Wholefarm Stocking Rate</th>
+                        <th scope="col">Livestock unit per Hectacre</th>
+                    </tr>
+                    {% for total in list_for_result %}
+                    <tr>
+                        <td>{{ total.0 }}</td>
+                        <td>{{ total.1 }}</td>
+                        <td>{{ total.2 }}</td>
+                        <td>{{ total.3 }}</td>
+                        <td>{{ total.4 }}</td>
+                        <td>{{ total.5 }}</td>
+                    </tr>
                         {% endfor %}
                 </table>
                 <div id="button_wrapper">
