Last minute feature updateLSU

--- a/templates/storage_report.html
+++ b/templates/storage_report.html
@@ -1,4 +1,6 @@
+
 {% extends "base.html" %}
+{% include  "registration/login.html" %}
 
     {% block body %}
         <style>
@@ -10,16 +12,15 @@
                 text-align: center;
             }
         </style>
-        <form action = "/importExportReport" method="POST" class="formindent" >
+        <form action = "/storage_report" method="POST" class="formindent" >
             {% csrf_token %}
                 <table border="1" id="table">
                     <tr>
-                        <th scope="col">Total Nitrates</th>
-                        <th scope="col">Total Phosphates</th>
-                        <th scope="col">Total Land Area</th>
-                        <th scope="col">Grassland Stocking Rate</th>
-                        <th scope="col">Wholefarm Stocking Rate</th>
-                        <th scope="col">Livestock unit per Hectacre</th>
+                        <th scope="col">County</th>
+                        <th scope="col">Total Slurry Manure</th>
+                        <th scope="col">Total Storage</th>
+                        <th scope="col">Maximum Storage Available</th>
+                        <th scope="col">Space Available</th>
                     </tr>
                     {% for total in list_for_result %}
                     <tr>
@@ -28,7 +29,6 @@
                         <td>{{ total.2 }}</td>
                         <td>{{ total.3 }}</td>
                         <td>{{ total.4 }}</td>
-                        <td>{{ total.5 }}</td>
                     </tr>
                         {% endfor %}
                 </table>
