--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,6 @@
+
 {% load static %}
+
 <html>
     <head>
         {% block imag %}
@@ -8,16 +10,19 @@
 
         {% block nav %}
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="storage">Storage</a></li>
-            <li><a href="importExport">Import / Export</a></li>
-            <li><a href="conductGrasslandAssessment">Conduct Assessment</a></li>
+            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'storage' %}">Storage</a></li>
+            <li><a href="{% url 'importExport' %}">Import / Export</a></li> 
+            <li><a href="{% url 'conductGrasslandAssessment' %}">Conduct Assessment</a></li>
             <li><a href="#View Assessments">View Assessments</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
             <li style="float: right"><a href="#farm_records">Farm Records</a></li>
         </ul>
         {% endblock %}
     </head>
     <body>
+        
+
        {% block body %}
 
        {% endblock %}
