--- a/templates/conductGrasslandAssessment3.html
+++ b/templates/conductGrasslandAssessment3.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% include  "registration/login.html" %}
 
     {% block body %}
         <form action = "/conductGrasslandAssessment3" method="POST" id="cssTable">
