--- a/templates/conductGrasslandAssessment.html
+++ b/templates/conductGrasslandAssessment.html
@@ -1,55 +1,61 @@
 {% extends "base.html" %}
-{% include  "registration/login.html" %}
+{% include "registration/login.html" %}
 
 {% load static %}
 
-    {% block body %}
-    <style>
-        .invalid {
-            border: 3px solid red !important;
+{% block body %}
+<style>
+    .invalid {
+        border: 3px solid red !important;
+    }
+</style>
+<script>
+    window.onload = function validate_field() {
+        var elem = document.getElementById("land_table");
+        let element = rows[i].children[3].children[0];
+        if (!isInt(element.value)) {
+            element.classList.add("invalid")
         }
-    </style>
-    <script>
-        window.onload = function validate_field() {
-            var rows = document.getElementById("land_table").rows;
-            for(let i=4; i<rows.length-2;i++) {
-                var isInt = (x) => {
-                    return !isNaN(x) && !isNaN(parseInt(x));
-                };
-                rows[i].children[1].children[0].onkeyup = () => {
-                    let element = rows[i].children[1].children[0];
-                    if(!isInt(element.value)) {
-                        element.classList.add("invalid")
-                    }
-                    else {
-                        element.classList.remove("invalid");
-                    }
-                }
-            }
+        else {
+            element.classList.remove("invalid");
         }
 
-        function valid_fields() {
-            var valid = true;
-            var rows = document.getElementById("land_table").rows;
-            for(let i=0; i<rows.length;i++) {
-                if(rows[i].children[1].children[0].classList.contains("invalid"))
-                {
-                    valid = false;
-                    break;
-                }
+    function valid_fields() {
+        var valid = true;
+        var rows = document.getElementById("#id_herd_no");
+        rows[i].children[3].children[0].onkeyup = () => {
+            let element = rows[i].children[3].children[0];
+            if (!isInt(element.value)) {
+                element.classList.add("invalid")
             }
-            return valid;
+            else {
+                element.classList.remove("invalid");
+            }
         }
-    </script>
+    }
+</script>
 
-        <form action = "/conductGrasslandAssessment" method="POST" onsubmit="return valid_fields()" class="formindent">
-            {% csrf_token %}
-            <table border=1 id="land_table" onload="validate_field()">
-                {{ form }}
-            </table>
-            <div id="button_wrapper">
-                <input type = 'submit' value="Submit">
-                <input type = 'reset' value="Clear">
-            </div>
-        </form>
-    {% endblock %}
+
+<script>
+    $(function () {
+        $("#id_date").datepicker();
+    });
+</script>
+
+<form action="/conductGrasslandAssessment" method="POST" onsubmit="return valid_fields()" class="formindent">
+    {% csrf_token %}
+    <table border=1 id="land_table" onload="validate_field()">
+        {{ form }}
+
+    </table>
+    <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
+        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+    </div>
+    </div>
+    <div id="button_wrapper">
+        <input type='submit' value="Submit">
+        <input type='reset' value="Clear">
+    </div>
+</form>
+
+{% endblock %}
