--- a/templates/conductGrasslandAssessment4.html
+++ b/templates/conductGrasslandAssessment4.html
@@ -1,58 +1,57 @@
 {% extends "base.html" %}
-{% include  "registration/login.html" %}
+{% include "registration/login.html" %}
 
-    {% block body %}
-        <style>
-            #search {
-                width:auto;
-                height:auto;
-                padding: 2%;
-                border:2px solid rgba(50,50,50,0.3);
-                margin-top:3%;
-            }
-        </style>
+{% block body %}
+<style>
+    #search {
+        width: auto;
+        height: auto;
+        padding: 2%;
+        border: 2px solid rgba(50, 50, 50, 0.3);
+        margin-top: 3%;
+    }
+</style>
 
-        <script>
-            function search_table() {
-                var search_term = document.getElementById("search").value.toLowerCase();
+<script>
+    function search_table() {
+        var search_term = document.getElementById("search").value.toLowerCase();
 
-                var r = document.getElementById("feed_table").rows;
-                for(let i=1;i<r.length;i++)
-                {
-                    r[i].style.display = r[i].children[1].innerHTML.toLowerCase().indexOf(search_term) !== -1 ? "" : "none"; 
-                }
-            }
-        </script>
+        var r = document.getElementById("feed_table").rows;
+        for (let i = 1; i < r.length; i++) {
+            r[i].style.display = r[i].children[1].innerHTML.toLowerCase().indexOf(search_term) !== -1 ? "" : "none";
+        }
+    }
+</script>
 
-        <input type="text" id="search" onkeyup="search_table()" placeholder="Search Feed">
+<input type="text" id="search" onkeyup="search_table()" placeholder="Search Feed">
 
-        <form action = "/conductGrasslandAssessment4" method="POST" id="cssTable">
-            {% csrf_token %}
-            <style>
-                th {
-                    text-align: center !important;
-                }
-            </style>
+<form action="/conductGrasslandAssessment4" method="POST" id="cssTable">
+    {% csrf_token %}
+    <style>
+        th {
+            text-align: center !important;
+        }
+    </style>
 
-            <table border="1" id="feed_table">
-                <tr>
-                   <th scope="col">Type of Feed</th>
-                   <th scope="col">Feed Name</th>
-                   <th scope="col">Kg per Tonne fed</th>
-                   <th scope="col">Tonnage</th>
-               </tr>
-               {% for task,field in form %}
-               <tr>
-                   <td>{{ task.feed_type }}</td>
-                   <td>{{ task.feed_name }}</td>
-                   <td>{{ task.kg_per_tonne_fed }}</td>
-                   <td>{{ field }}</td>
-               </tr>
-               {% endfor %}
-        </table>
-        <div id="button_wrapper">
-            <input type = 'submit' value="Submit">
-            <input type = 'reset' value="Clear">
-        </div>
-        </form>
-    {% endblock %}
+    <table border="1" id="feed_table">
+        <tr>
+            <th scope="col">Type of Feed</th>
+            <th scope="col">Feed Name</th>
+            <th scope="col">Kg per Tonne fed</th>
+            <th scope="col">Tonnage</th>
+        </tr>
+        {% for task,field in form %}
+        <tr>
+            <td>{{ task.feed_type }}</td>
+            <td>{{ task.feed_name }}</td>
+            <td>{{ task.kg_per_tonne_fed }}</td>
+            <td>{{ field }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+    <div id="button_wrapper">
+        <input type='submit' value="Submit">
+        <input type='reset' value="Clear">
+    </div>
+</form>
+{% endblock %}
