--- a/templates/conductGrasslandAssessment5.html
+++ b/templates/conductGrasslandAssessment5.html
@@ -1,66 +1,72 @@
 {% extends "base.html" %}
-{% include  "registration/login.html" %}
+{% include "registration/login.html" %}
 
-    {% block body %}
-    <style>
-        .invalid {
-            border: 3px solid red !important;
-        }
-    </style>
-    <script>
-        window.onload = function validate_field() {
-            var rows = document.getElementById("land_table").rows;
-            for(let i=1; i<rows.length;i++) {
-                var isInt = (x) => {
-                    return !isNaN(x) && !isNaN(parseInt(x));
-                };
-                rows[i].children[3].children[0].onkeyup = () => {
-                    let element = rows[i].children[3].children[0];
-                    if(!isInt(element.value)) {
-                        element.classList.add("invalid")
-                    }
-                    else {
-                        element.classList.remove("invalid");
-                    }
+{% block body %}
+<style>
+    .invalid {
+        border: 3px solid red !important;
+    }
+</style>
+<style>
+    .invalid {
+        border: 3px solid red !important;
+    }
+</style>
+<script>
+    window.onload = function validate_field() {
+        var rows = document.getElementById("cssTable").rows;
+        for (let i = 1; i < rows.length; i++) {
+            var isInt = (x) => {
+                return !isNaN(x) && !isNaN(parseInt(x));
+            };
+            rows[i].children[3].children[0].onkeyup = () => {
+                let element = rows[i].children[3].children[0];
+                if (!isInt(element.value)) {
+                    element.classList.add("invalid")
+                }
+                else {
+                    element.classList.remove("invalid");
                 }
             }
         }
+    }
 
-        function valid_fields() {
-            var valid = true;
-            var rows = document.getElementById("land_table").rows;
-            for(let i=0; i<rows.length;i++) {
-                if(rows[i].children[1].children[0].classList.contains("invalid"))
-                {
-                    valid = false;
-                    break;
-                }
+    function valid_fields() {
+        var valid = true;
+        var rows = document.getElementById("cssTable").rows;
+        for (let i = 1; i < rows.length; i++) {
+            let element = rows[i].children[3].children[0];
+            if (element.classList.contains("invalid")) 
+            {
+                valid = false;
+                break;
             }
-            return valid;
         }
-    </script>
+        return valid;
+    }
+</script>
 
-        <form action = "/conductGrasslandAssessment5" method="POST" onsubmit="return valid_fields()" class="formindent">
-            {% csrf_token %}
-                <table border="1" id="land_table" onload="validate_field()">
-                        <tr>
-                            <th scope="col">Type of Livestock</th>
-                            <th scope="col">Nitrogen</th>
-                            <th scope="col">Phosphoros</th>
-                            <th>Number of Animals</th>
-                        </tr>
-                        {% for task,field in form %}
-                        <tr>
-                            <td>{{ task.type_of_animal }}</td>
-                            <td>{{ task.organic_nitrates }}</td>
-                            <td>{{ task.organic_potassium }}</td>
-                            <td>{{ field }}</td>
-                        </tr>
-                        {% endfor %}
-                </table>
-                <div id="button_wrapper">
-                    <input type = 'submit' value="Submit">
-                    <input type = 'reset' value="Clear">
-                </div>
-        </form>
-    {% endblock %}
+<form action="/conductGrasslandAssessment5" method="POST" onsubmit="return valid_fields();" class="formindent">
+    {% csrf_token %}
+    <table border="1" id="cssTable" >
+        <tr>
+            <th scope="col">Type of Livestock</th>
+            <th scope="col">Nitrogen</th>
+            <th scope="col">Phosphoros</th>
+            <th>Number of Animals</th>
+        </tr>
+        {% for task,field in form %}
+        <tr>
+            <td>{{ task.type_of_animal }}</td>
+            <td>{{ task.organic_nitrates }}</td>
+            <td>{{ task.organic_potassium }}</td>
+            <td>{{ field }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+    <div id="button_wrapper">
+        <input type='submit' value="Submit">
+        <input type='reset' value="Clear">
+    </div>
+</form>
+{% endblock %}
