--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,33 @@
-
 {% load static %}
 
 <html>
-    <head>
-        {% block imag %}
-        <img src="{% static 'teagasc_logo.png' %}" ALIGN = "right" HSPACE="500"/>    <h1> Advisors Application</h1>
-        {% endblock %}
-        <link rel="stylesheet" href="{% static 'css/styles.css' %}"/>
 
-        {% block nav %}
-        <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'storage' %}">Storage</a></li>
-            <li><a href="{% url 'importExport' %}">Import / Export</a></li> 
-            <li><a href="{% url 'conductGrasslandAssessment' %}">Conduct Assessment</a></li>
-            <li><a href="{% url 'updateLsu' %}">Update LSU</a></li>
-            <li><a href="{% url 'logout' %}">Logout</a></li>
-            <li style="float: right"><a href="{% url 'records' %}">Farm Records</a></li>
-        </ul>
-        {% endblock %}
-    </head>
-    <body>
-        
+<head>
+    {% block imag %}
+    <img src="{% static 'teagasc_logo.png' %}" ALIGN="right" HSPACE="500" />
+    <h1> Advisors Application</h1>
+    {% endblock %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 
-        {% block body %}
+    {% block nav %}
+    <ul>
+        <li><a href="{% url 'home' %}">Home</a></li>
+        <li><a href="{% url 'storage' %}">Storage</a></li>
+        <li><a href="{% url 'importExport' %}">Import / Export</a></li>
+        <li><a href="{% url 'conductGrasslandAssessment' %}">Conduct Assessment</a></li>
+        <li><a href="{% url 'updateLsu' %}">Update LSU</a></li>
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+        <li style="float: right"><a href="{% url 'records' %}">Farm Records</a></li>
+    </ul>
+    {% endblock %}
+</head>
 
-        {% endblock %}
-    </body>
+<body>
+
+
+    {% block body %}
+
+    {% endblock %}
+</body>
+
 </html>
